# tfsi

./: Cargo.toml  README.md
src/: component.rs  construct.rs  lib.rs  macros.rs  provide.rs  require.rs
src/components/: component_basic_tests.rs  component_forward.rs  component_from_provider.rs  component_pair.rs  mod.rs
src/injector/: impl_construct.rs  impl_empty.rs  impl_trait_provide.rs  impl_with_arc.rs  impl_with_component.rs  impl_with_provider.rs  impl_with_value.rs  injector_tests.rs  mod.rs
src/providers/: mod.rs  provide_nil.rs  provide_one.rs  provide_one_tests.rs
src/providers/one/: mod.rs  provide_arc.rs  provide_arc_tests.rs  provide_boxed.rs  provide_boxed_tests.rs  provide_forward.rs  provide_forward_tests.rs  provide_once.rs  provide_once_tests.rs  provide_ref_tests.rs  provide_val.rs  provide_val_tests.rs
src/providers/pair/: mod.rs  provide_pair.rs  provide_pair_tests.rs
src/requirements/: mod.rs  require_nil.rs  require_one.rs  require_pair.rs  requirements_tests.rs
tests/: playground.rs
tests/example-00/: component_one.rs  main.rs
tests/example-01/: main.rs
tests/example-01/capabilities/: db.rs  http_server.rs  mod.rs
tests/example-01/config/: app_config.rs  db_config.rs  http_bind_config.rs  mod.rs
tests/example-01/di/: caps_component.rs  config_component.rs  db_component.rs  http_component.rs  mod.rs
tests/example-02/: app.rs  app_config.rs  main.rs
tests/example-02/capabilities/: db.rs  mod.rs
tests/example-02/di/: mod.rs  real_db_component.rs  (+1 more)
tests/example-03/: db.rs  main.rs  real_db.rs  requirement.rs  test_db.rs
(+4 files in other folders)
