[package]
name = "tfsi"
version = "0.1.0"
authors = ["Roman Gafiyatullin <r.gafiyatullin@me.com>"]
edition = "2018"

description = "a simple compile-time dependency injection kit"
license = "MIT"
repository = "https://github.com/RGafiyatullin/tfsi-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
